# typer-cli-template

./: README.md  pyproject.toml
.github/workflows/: black.yml  cd.yml  ci.yml  ruff.yml
cli/: __init__.py  __main__.py  main.py
cli/commands/: __init__.py  echo.py  hello.py
cli/commands/ai/: __init__.py  app.py
cli/commands/ai/commands/: __init__.py  chat.py  prompt.py
