[tool.poetry]
name = "typer-cli-template"
version = "0.1.0"
description = "Typer CLI Template"
authors = ["Yousuf Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["app.py"]
homepage = "https://github.com/youzarsiph/typer-cli-template"
repository = "https://github.com/youzarsiph/typer-cli-template"
documentation = "https://github.com/youzarsiph/typer-cli-template"
packages = [{ include = "cli" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.5"

[tool.poetry.scripts]
typer-cli = "cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
